# learningCpp

./: CMakeLists.txt
c++17/: CMakeLists.txt
c++17/copyconstruct/: test.cpp  vector.cpp  vector.h
c++17/cttd/: pair.hpp  test.cpp
c++17/moveconstruct/: test.cpp  vector.cpp  vector.h
c++20/: CMakeLists.txt
c++20/concepts/: constraints.h  list.hpp  stack.hpp  test.cpp
datastructure/: indexable.h  iterable.h
datastructure/array/: array.hpp  test.cpp
include/: array.h  constructor.h  crtp.h  decltype.h  exceptions.h  numbers.h  point.h  policy.h  returntype.h  type_traits.h  virtual_inheritance.h
src/: array.cpp  constructor.cpp  crtp.cpp  numbers.cpp  policy.cpp  virtual_inhiritance.cpp
test/: array_test.cpp  constructor_test.cpp  crtp_test.cpp  numbers_test.cpp  point_test.cpp  tests_runner.cpp  virtual_inheritance_test.cpp
